--- a/src/ui-kit.css
+++ b/src/ui-kit.css
@@ -1,7 +1,7 @@
 :root {
 	--base-strong: #42474d;
 	--base-strong-down: #667280;
-	--base-weak: #dae3f1;
+	--base-weak: #FFFFFF;
 
 	--faint-strong: #a6acb3;
 	--faint-middle: #cedef2;
