--- a/src/ui-kit.css
+++ b/src/ui-kit.css
@@ -61,6 +61,9 @@
 	--fs-xxs: 10px;
 	--fs-3xs: 8px;
 
+	--lh-xs: 12px;
+	--lh-xs-text: 16px;
+
 	--fw-bold: 700;
 	--fw-semibold: 600;
 	--fw-medium: 500;
