--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,6 +7,7 @@
 	font-weight: var(--fw-semibold);
 	font-size: var(--fs-xs);
 	line-height: var(--lh-xs);
+	text-decoration: none;
 
 	border: none;
 	border-radius: 16px;
