style: add new css variable

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,7 +10,7 @@
 	text-decoration: none;
 
 	border: none;
-	border-radius: 16px;
+	border-radius: var(--border-radius-16);
 	cursor: pointer;
 }
 
