--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -1,107 +1,93 @@
-.label {
-	position: absolute;
-	top: 4px;
-	right: 0;
-	bottom: 0;
-	left: 60px;
-
-	font-size: 14px;
-
-	cursor: pointer;
-}
-
-.switch-handle {
-	display: none;
-}
-
-.switch-handle:disabled + .slider-white,
-.switch-handle:disabled + .slider-gray {
-	cursor: not-allowed;
-	opacity: 0.4;
-}
-
-.label-disabled {
-	position: absolute;
-	top: 4px;
-	right: 0;
-	bottom: 0;
-	left: 60px;
-
-	font-size: 14px;
-
-	cursor: not-allowed;
-	opacity: 0.4;
-}
-
 .switch {
+	display: inline-flex;
+
+	align-items: center;
+
+	column-gap: 10px;
+}
+
+.input {
+	margin: 0;
+
+	appearance: none;
+}
+
+.switchHandle {
 	position: relative;
 
-	display: inline-block;
-	align-items: center;
 	width: 44px;
 	height: 26px;
-}
 
-.slider-white,
-.slider-gray {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-
-	background-color: var(--complement-strong);
+	border-radius: 14px;
 	cursor: pointer;
 
-	transition: 0.4s;
+	transition: all 0.2s;
 }
 
-.slider-white::before,
-.slider-gray::before {
+.white .switchHandle {
+	background-color: var(--back-faint-weak);
+}
+
+.gray .switchHandle {
+	background-color: var(--back-faint-weak-up);
+}
+
+.input:checked + .switchHandle {
+	background-color: var(--complement-strong);
+}
+
+.input:disabled + .switchHandle {
+	cursor: not-allowed;
+	opacity: 0.4;
+}
+
+.circle {
 	position: absolute;
-	bottom: 2px;
-	left: 2px;
+	top: 2px;
+	left: calc(100% - 23px);
 
 	width: 22px;
 	height: 22px;
 
+	transition: all 0.2s ease-in-out;
+}
+
+.circle::before {
+	position: absolute;
+
 	background-color: var(--base-weak);
+	border-radius: 50%;
 	box-shadow: 0 4px 4px rgb(0 0 0 / 0.07);
 
-	transition: 0.4s;
+	transition: all 0.2s ease-in-out;
 
 	content: "";
+	inset: 0;
 }
 
-.slider-white:active::before,
-.slider-gray:active::before {
-	transform: scaleX(1.2);
-	transform-origin: center left;
+.input:checked + .switchHandle .circle {
+	left: 2px;
 }
 
-.switch-handle:checked + .slider-white:active::before,
-.switch-handle:checked + .slider-gray:active::before {
-	transform: scaleX(1.2);
-	transform-origin: center right;
+.input:not(:disabled) + .switchHandle:active .circle::before {
+	right: 0;
+	left: -15%;
 }
 
-.switch-handle:checked + .slider-white {
-	background-color: var(--faint-weak-up);
+.input:checked:not(:disabled) + .switchHandle:active .circle::before {
+	right: -15%;
+	left: 0;
 }
 
-.switch-handle:checked + .slider-gray {
-	background-color: var(--back-faint-middle);
+.label {
+	color: var(--base-strong);
+	font-size: var(--fs-xs);
+	line-height: var(--lh-xs);
+
+	cursor: pointer;
 }
 
-.switch-handle:checked + .slider-white::before,
-.switch-handle:checked + .slider-gray::before {
-	left: 18px;
-}
-
-.round {
-	border-radius: 13px;
-}
-
-.round::before {
-	border-radius: 50%;
+.input:disabled ~ .label {
+	cursor: not-allowed;
+	opacity: 0.4;
 }
